add resource delete; validate kafka topic
